# pyMDmix-python3.10

./: .dockerignore  .gitignore  =1.0.0  =3.5.0  DOCKER_GUIDE.md  Dockerfile  INSTALLATION_GUIDE.md  MIGRATION_PYTHON3.md  MIGRATION_SUMMARY.md  README.md  UPDATE_NOTES.md  build_docker.sh  createSolvents.py  desktop.ini  docker-compose.yml  environment_p27.yml  fix_all_indentation.py  fix_biskit_imports.py  fix_indentation.py  fix_malformed_imports.py  fix_percent_syntax.py  fix_raise_statements.py  fix_relative_imports.py  install.sh  install_dependencies.sh  pyproject.toml  requirements.txt  setup.py  setup_production_environment.py  test_functionality_complete.py  test_import.py  validate_installation.py
migration_tools/: MIGRATION_SUMMARY.md  README.md  fix_malformed_prints.py  fix_raise_statements.py  fix_remaining_imports.py  fix_syntax_errors.py  migrate_to_py3.py  setup_env.sh  test_functionality.py
pyMDMix/: Align.py  Amber.py  Analysis.py  AutoPrepare.py  Browser.py  Energy.py  Executor.py  GridData.py  GridsManager.py  HotSpotsManager.py  MDSettings.py  NAMD.py  NamdDCDParser.py  OFFManager.py  OpenMM.py  PDB.py  Parsers.py  Plotter.py  Projects.py  QueueWriting.py  Replicas.py  SettingsParser.py  Solvents.py  Systems.py  Trajectory.py  __init__.py  __main__.py  biskit_compat.py  containers.py  settings.py  test.py  tools.py
pyMDMix/Actions/: Density.py  Residence.py  __init__.py
pyMDMix/Commands/: Add.py  Analyze.py  Command.py  Create.py  Info.py  Queue.py  Remove.py  Tools.py
pyMDMix/data/solventlib/: createSolventDB.py
src/: mdmix
