[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyMDMix"
version = "0.2.8"
description = "Molecular Dynamics with organic solvent mixtures setup and analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [
    {name = "Daniel Alvarez-Garcia", email = "algarcia.daniel@gmail.com"}
]
keywords = ["molecular dynamics", "mdmix", "computational chemistry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy",
    "scipy", 
    "matplotlib",
    "netCDF4",
    "biopython",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[project.scripts]
mdmix = "pyMDMix.__main__:main"

[project.urls]
Homepage = "http://mdmix.sourceforge.net"
Repository = "https://github.com/CBDD/pyMDmix"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pyMDMix*"]
exclude = ["tests*", "migration_tools*"]

[tool.setuptools.package-data]
"pyMDMix.data" = ["*.*", "defaults/*", "solventlib/*", "templates/*", "test/*"]
